# QRCode-esp32

./: CMakeLists.txt  component.mk
src/: qrcode.h
